# sim

./: FSAL_SIM  Makefile  README.md
config/: sim.conf
nfs-ganesha-5.7/src/FSAL/: CMakeLists.txt
nfs-ganesha-5.7/src/FSAL/FSAL_SIM/: CMakeLists.txt  export.c  fs.c  fs.h  handle.c  internal.c  internal.h  main.c  utils.h
nfs-ganesha-5.7/src/libntirpc/: libntirpc.spec-in.cmake
nfs-ganesha-5.7/src/libntirpc/src/: work_pool.c
